major pages done

--- a/src/app/background/background.component.scss
+++ b/src/app/background/background.component.scss
@@ -44,7 +44,7 @@ line-height: normal;
 .desc{
     margin-left: 1%;
 
-    color: #6B6E70;
+    color: #607D8B;
 font-family: Roboto Mono;
 font-size: 20px;
 font-style: normal;
