--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,31 +1,53 @@
 <div class="skills-container">
   <mat-grid-list cols="2" rowHeight="2:1">
     <mat-grid-tile>
+      <div class="skil-card">
 
-        <h3 class="title">Programming</h3>
-        <ul>
-            <li>Python</li>  
-            <li>SQL</li> 
-            <li>C/C++</li>  
-            <li>Javascript | HTML | CSS</li> 
-         </ul>
+        <h3 class="title">Programming skills</h3>
+        <ul class="list">
+          <li>Python</li>  
+          <li>SQL</li> 
+          <li>C/C++</li>  
+          <li>Javascript | HTML | CSS</li> 
+        </ul>
+      </div>
     </mat-grid-tile>
     <mat-grid-tile>
-        <h3 class="title">Technical Skills:</h3>
-        
+      <div class="skil-card">
 
+        <h3 class="title">Technical skills</h3>
+        <ul  class="list">
+          <li>Python for Data Science</li>  
+          <li>SAP BO Data Services</li> 
+          <li>Angular (MEAN stack)</li>  
+          <li>React (MEARN stack)</li> 
+        </ul>
+      </div>
 
     </mat-grid-tile>
     <mat-grid-tile>
-        <h3 class="title">Functional Skills:</h3>
+      <div class="skil-card">
 
-
-
+        <h3 class="title">Functional Skills</h3>
+        <ul  class="list">
+          <li>Requirement management </li>
+          <li> Knowledge management</li>  
+          <li>data analysis and reporting</li> 
+          <li>test and defect management</li>  
+        </ul>
+      </div>
     </mat-grid-tile>
     <mat-grid-tile>
-        <h3 class="title">Languages:</h3>
+      <div class="skil-card">
 
-
+        <h3 class="title">Languages</h3>
+        <ul  class="list">
+          <li>English (fluent)</li>  
+          <li>Malayalam (native)</li> 
+          <li>Hindi (conversational)</li>  
+          <li>Tamil (conversational) </li> 
+        </ul>
+      </div>
 
     </mat-grid-tile>
   </mat-grid-list>
