--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -6,3 +6,15 @@ font-style: normal;
 font-weight: 400;
 line-height: normal;
 }
+
+.list{
+    color: #FFF;
+font-family: Roboto Mono;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+.skill-card{
+    width: 100%;
+}
